# FCM

./: FCM.cabal
app/: Main.hs
src/FCM/: FCM.hs  ParserCSV.hs
test/data/: irises.txt
